name:                simple-warp-server
version:             0.1.0.0
synopsis:            A simple warp server
-- description:         
homepage:            https://gitlab.com/yamadapc/simple-warp-server
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2015 Pedro Tacla Yamada
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable simple-warp-server
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       HTTP >= 4000.2.10
                     , base >=4 && <5
                     , http-types >= 0.8.5
                     , wai >= 3.0.2.2
                     , warp >= 3
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -Odph -optlo-O3
